--- a/app/styles/_lessonIntro.scss
+++ b/app/styles/_lessonIntro.scss
@@ -629,7 +629,7 @@
         }
     }
     .embed-powered-by-lergo {
-        margin: 20px 35px;
+        margin: 7px 35px;
     }
 }
 
